Implemented ThirdPartyClient Package and reorganized 3rd Party APIs decoupled from code -> Implemented Adapter Design Pattern -> Implemented @ResponseStatus in Exception handling for which Controller Advices not required -> Implemented API URL in application.properties file using @Value annotation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,9 @@
 #productservice.type=SelfProductServiceImplementation
 
+
+#server.port=3000
+
+
+#API Configurations
+fakestore.api.url= https://fakestoreapi.com
+fakestore.api.paths.product= /products
