--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,37 @@
 #productservice.type=SelfProductServiceImplementation
-
-
 #server.port=3000
 
 
 #API Configurations
 fakestore.api.url= https://fakestoreapi.com
 fakestore.api.paths.product= /products
+
+#MYSQL Config
+spring.datasource.url=jdbc:mysql://localhost:3306/eCom_productService
+spring.datasource.username=jay
+spring.datasource.password=HelpMe@2023
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+#spring.batch.job.enabled=false
+
+#JPA Settings
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.show-sql=true
+#DB Migration Settings
+spring.flyway.baseline-on-migrate = true
+
+
+
+
+
+
+
+
+
+
+
+#MYSQL Commands
+#show databases;
+#create database eCom_productService;
+#grant all privileges on eCom_productService.* to jay;
+#SELECT user FROM mysql.user;
