--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,10 +8,10 @@ fakestore.api.paths.product= /products
 
 #MYSQL Config
 spring.datasource.url=jdbc:mysql://localhost:3306/eCom_productService
-spring.datasource.username=jay
+spring.datasource.username=product_admin
 spring.datasource.password=HelpMe@2023
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
+server.port=9000
 #spring.batch.job.enabled=false
 
 #JPA Settings
