--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,32 +2,32 @@
 #server.port=3000
 
 
-#API Configurations
+#3rd party API Configurations
 fakestore.api.url= https://fakestoreapi.com
 fakestore.api.paths.product= /products
 
-#MYSQL Config
+#MYSQL Config local DB
 spring.datasource.url=jdbc:mysql://localhost:3306/eCom_productService
 spring.datasource.username=product_admin
 spring.datasource.password=HelpMe@2023
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 server.port=9000
-#spring.batch.job.enabled=false
+spring.batch.job.enabled=false
 
 #JPA Settings
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 #DB Migration Settings
 spring.flyway.baseline-on-migrate = true
 
 
-
-
-
-
-
-
-
+#MYSQL Config AWS (Now its down due to billing)
+#spring.datasource.url=jdbc:mysql://ecom-productservice-db.c5g86wgkcoae.eu-north-1.rds.amazonaws.com:3306/ecom_productservice
+#spring.datasource.username=product_admin
+#spring.datasource.password=HelpMe@2023
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#server.port=9000
+#spring.batch.job.enabled=false
 
 
 #MYSQL Commands
@@ -35,3 +35,15 @@ spring.flyway.baseline-on-migrate = true
 #create database eCom_productService;
 #grant all privileges on eCom_productService.* to jay;
 #SELECT user FROM mysql.user;
+
+#spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8000
+
+
+#took it from ElasticBeanStack of UserService
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://userservice-final-test-ecom.eu-north-1.elasticbeanstalk.com
+logging.level.org.springframework.security=trace
+
+#ElasticSearch URLs
+#opensearch.uris=https://search-productservice-aptnubdasfnJENF13KN02KD1130LSu.us-west-2.es.amazonaws.com
+#spring.data.elasticsearch.repositories.enabled=true
+spring.main.allow-bean-definition-overriding=true
